# zkhack-mtl

./: .gitignore  README.md
nova_net/: Cargo.toml
nova_net/src/: lib.rs
plonky3_exponent_range_check/: Cargo.toml
plonky3_exponent_range_check/src/: .main.rs.swp  main.rs
r0/: Cargo.toml
r0/handler/: index.ts
r0/host/: Cargo.toml
r0/host/src/: main.rs
r0/methods/guest/: Cargo.toml
r0/methods/guest/src/: main.rs
zkVerify/: .env.testnet  package-lock.json
zkVerify/data/: proof_2024-08-11_09-36-13-128.json
zkVerify/src/send-proof/: index.ts
